--- a/frontend/SMSS-app/package.json
+++ b/frontend/SMSS-app/package.json
@@ -5,33 +5,38 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "aws-amplify": "^6.8.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.687.0",
+    "@chakra-ui/react": "^2.10.4",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@tanstack/react-query": "^5.59.20",
+    "amazon-cognito-identity-js": "^6.3.12",
+    "axios": "^1.7.7",
+    "framer-motion": "^6.5.1",
+    "install": "^0.13.0",
+    "next-themes": "^0.4.3",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.7.0",
-    "@aws-amplify/backend-cli": "^1.4.2",
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "aws-cdk": "^2.166.0",
-    "aws-cdk-lib": "^2.166.0",
-    "constructs": "^10.4.2",
-    "esbuild": "^0.24.0",
     "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   }
 }
