--- a/frontend/SMSS-app/package.json
+++ b/frontend/SMSS-app/package.json
@@ -16,11 +16,17 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@tanstack/react-query": "^5.59.20",
     "amazon-cognito-identity-js": "^6.3.12",
     "axios": "^1.7.7",
     "framer-motion": "^6.5.1",
     "install": "^0.13.0",
+    "luxon": "^3.5.0",
     "next-themes": "^0.4.3",
     "npm": "^10.9.0",
     "react": "^18.3.1",
