--- a/frontend/SMSS-app/package.json
+++ b/frontend/SMSS-app/package.json
@@ -22,6 +22,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@tanstack/react-query": "^5.59.20",
+    "amazon-chime-sdk-component-library-react": "^3.9.0",
+    "amazon-chime-sdk-js": "^3.25.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "axios": "^1.7.7",
     "framer-motion": "^6.5.1",
@@ -32,7 +34,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
