--- a/frontend/SMSS-app/package.json
+++ b/frontend/SMSS-app/package.json
@@ -33,6 +33,7 @@
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "styled-components": "^5.3.11"
